* Move fuse.K to fuse.Function.IDENTITY and add fuse.Function.TRUE/fuse.Function.FALSE shortcut functions. [jddalton]
  Note: Backwards compatibility warning.

* Remove a reference to the window.document object in fuse.dom.Form#serializeElements. [jddalton]

* Ensure namespaces only inherit from the parent namespaces `plugin` property and not static properties. [jddalton]

* Reduce the number of private variables and standardize repeatedly used variable names for better minification. [jddalton]

* Wrap apply() and call() of Array and String methods to ensure `thisArg` is not null or undefined. [jddalton]

* Move fuse.emptyFunction to fuse.Function.NOP and remove fuse.Object.isUndefined. [jddalton]
  Note: Backwards compatibility warning.

* Separate the fuse.util methods into their own /lang/util.js file. [jddalton]

* Separate the ECMA specification bug fixes into their own /lang/ecma.js file. [jddalton]

* Remove fuse.String.interpret. [jddalton]
  Note: Backwards compatibility warning.

* Fix window object detection for Safari 2.0 in fuse.dom.Window. [jddalton]

* Add a `raw` property to all wrapped sandboxed native methods to reference their original methods. [jddalton]

* Add support for proprietary opacity styles to setOpacity() and getOpacity(). [David Mark, jddalton]

* Make inspect() methods support iterating over objects that have their own generic inspect() method. [jddalton]

* Add native JSON support to the JSON methods and make them comply with ECMA specs. [FuseJS LH #22] [jddalton, kitsg, Tobie Langel]

* Optimize fuse.dom.Element modification methods and add append(), prepend(), insertBefore(), and insertAfter() methods. [FuseJS LH #53] [jddalton, kangax, kitsg]

* Add `defaults` object to constructors to store default properties / options. [jddalton, Thomas Aylott]

* Add fuse.dom.Event methods isStopped(), isCancelled(), isBubbling(), cancel(), stopBubbling(), and fuse.dom.Document method isLoaded(). [jddalton]